--- a/ADIN.WPF/View/TestModeView.xaml
+++ b/ADIN.WPF/View/TestModeView.xaml
@@ -33,7 +33,8 @@
                                         <RowDefinition Height="2"/>
                                     </Grid.RowDefinitions>
                                     <TextBlock x:Name="TestModeName" Grid.Column="0" Grid.Row="0" FontSize="14" Text="{Binding Name1}"/>
-                                    <TextBlock Grid.Column="0" Grid.Row="1" Text="{Binding Description}" FontSize="12" FontWeight="Normal"/>
+                                    <TextBlock x:Name="TestModeName2" Grid.Column="1" Grid.Row="0" FontSize="14" Text="{Binding Name2}"/>
+                                    <TextBlock Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" Text="{Binding Description}" FontSize="12" FontWeight="Normal"/>
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
