--- a/ADIN.WPF/View/LinkPropertiesView.xaml
+++ b/ADIN.WPF/View/LinkPropertiesView.xaml
@@ -10,7 +10,8 @@
              d:DesignHeight="1500" d:DesignWidth="800">
     <UserControl.Resources>
         <FrameworkElement x:Key="ProxyElement" DataContext="{Binding}"/>
-        <telerik:BooleanToVisibilityConverter x:Key="booleanVisibilityConverter"/>
+        <converters:BooleanVisibilityConverter x:Key="booleanVisibilityConverter" IsInversed="False"/>
+        <converters:BooleanVisibilityConverter x:Key="invertedBooleanVisibilityConverter" IsInversed="True"/>
     </UserControl.Resources>
     <Grid Margin="5">
         <!--<Label Content="Link Properties View"/>
@@ -19,7 +20,7 @@
         <ContentControl Visibility="Visible" Content="{StaticResource ProxyElement}"/>
         <ScrollViewer VerticalScrollBarVisibility="Auto" >
             <StackPanel Orientation="Vertical" IsEnabled="{Binding IsDeviceSelected}">
-                <Grid Visibility="{Binding IsADIN1200Board_ADIN1300Board, Converter={StaticResource booleanVisibilityConverter}}">
+                <Grid Visibility="{Binding IsADIN1100Board, Converter={StaticResource invertedBooleanVisibilityConverter}}">
                     <GroupBox Header="Speed" Style="{StaticResource GroupBoxStyle}" Margin="0 5">
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -32,7 +33,7 @@
                     </GroupBox>
                 </Grid>
 
-                <Grid Visibility="{Binding IsADIN1200Board_ADIN1300Board, Converter={StaticResource booleanVisibilityConverter}}">
+                <Grid Visibility="{Binding IsADIN1100Board, Converter={StaticResource invertedBooleanVisibilityConverter}}">
                     <GroupBox Header="Auto-Negotation Advertised Speeds" Style="{StaticResource GroupBoxStyle}" 
 				  Visibility="{Binding DataContext.IsANAdvertisedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}"
 				  Margin="0 0 0 5">
@@ -85,7 +86,7 @@
                     </GroupBox>
                 </Grid>
 
-                <Grid Visibility="{Binding IsADIN1200Board_ADIN1300Board, Converter={StaticResource booleanVisibilityConverter}}">
+                <Grid Visibility="{Binding IsADIN1100Board, Converter={StaticResource invertedBooleanVisibilityConverter}}">
                     <GroupBox Header="EEE Advertisement" Style="{StaticResource GroupBoxStyle}"
 				              Visibility="{Binding DataContext.IsANAdvertisedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}"
 				              Margin="0 0 0 5">
@@ -112,7 +113,7 @@
                     </GroupBox>
                 </Grid>
 
-                <Grid Visibility="{Binding IsADIN1200Board_ADIN1300Board, Converter={StaticResource booleanVisibilityConverter}}">
+                <Grid Visibility="{Binding IsADIN1100Board, Converter={StaticResource invertedBooleanVisibilityConverter}}">
                     <GroupBox Header="Down Speed" Style="{StaticResource GroupBoxStyle}"
 				              Visibility="{Binding DataContext.IsANAdvertisedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}"
 				              Margin="0 0 0 5">
@@ -143,7 +144,7 @@
                     </GroupBox>
                 </Grid>
 
-                <Grid Visibility="{Binding IsADIN1200Board_ADIN1300Board, Converter={StaticResource booleanVisibilityConverter}}">
+                <Grid Visibility="{Binding IsADIN1100Board, Converter={StaticResource InvertedBooleanConverter}}">
                     <GroupBox Header="Forced Speed" Style="{StaticResource GroupBoxStyle}" 
 				  Visibility="{Binding DataContext.IsForcedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}"
 				  Margin="0 0 0 5">
@@ -158,7 +159,7 @@
                     </GroupBox>
                 </Grid>
 
-                <Grid Visibility="{Binding IsADIN1200Board_ADIN1300Board, Converter={StaticResource booleanVisibilityConverter}}">
+                <Grid Visibility="{Binding IsADIN1100Board, Converter={StaticResource invertedBooleanVisibilityConverter}}">
                     <GroupBox Header="MDIX" Style="{StaticResource GroupBoxStyle}"
 				  Visibility="{Binding DataContext.IsForcedSpeedVisible, Source={StaticResource ProxyElement}, Converter={StaticResource booleanVisibilityConverter}}"
 				  Margin="0 0 0 5">
@@ -173,7 +174,7 @@
                     </GroupBox>
                 </Grid>
 
-                <Grid Visibility="{Binding IsADIN1200Board_ADIN1300Board, Converter={StaticResource booleanVisibilityConverter}}">
+                <Grid Visibility="{Binding IsADIN1100Board, Converter={StaticResource invertedBooleanVisibilityConverter}}">
                     <GroupBox Header="Energy Detect Power-down Mode" Style="{StaticResource GroupBoxStyle}" Margin="0,0,0,5">
                         <Grid>
                             <Grid.ColumnDefinitions>
