--- a/ADIN.WPF/View/OperationView.xaml
+++ b/ADIN.WPF/View/OperationView.xaml
@@ -8,11 +8,13 @@
              xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
              xmlns:viewmodel="clr-namespace:ADIN.WPF.ViewModel"
              xmlns:view="clr-namespace:ADIN.WPF.View"
+             xmlns:converter="clr-namespace:ADIN.WPF.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="820" d:DesignWidth="1200">
     <UserControl.Resources>
         <ResourceDictionary>
-            
+            <converter:BooleanVisibilityConverter x:Key="booleanVisibilityConverter" IsInversed="False"/>
+            <converter:BooleanVisibilityConverter x:Key="invertedBooleanVisibilityConverter" IsInversed="True"/>
         </ResourceDictionary>
     </UserControl.Resources>
     <DockPanel>
@@ -113,78 +115,11 @@
                             --><!--<GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />--><!--
                         </Grid>
                     </TabItem>-->
+                    <TabItem Header="Cable Diagnostics" Style="{StaticResource TabItemStyle}" Visibility="{Binding IsCableDiagVisible, Converter={StaticResource booleanVisibilityConverter}}">
+                        
+                    </TabItem>
                 </TabControl>
             </Grid>
-            <!--<Grid Grid.Column="1" Grid.Row="1">
-                <TabControl>
-                    <TabItem Header="Link Properties" IsSelected="True">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="2*" MinWidth="400"/>
-                                <ColumnDefinition Width="3"/>
-                                <ColumnDefinition Width="2*"/>
-                            </Grid.ColumnDefinitions>
-                            <components:LinkPropertiesView Grid.Column="0" DataContext="{Binding LinkPropertiesViewModel}"/>
-                            <GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />
-                            <Grid Grid.Column="2">
-                                <components:DeviceStatusView DataContext="{Binding DeviceStatusViewModel}"/>
-                            </Grid>
-                        </Grid>
-                    </TabItem>
-                    <TabItem Header="Register Access" Visibility="Collapsed">
-                        <components:RegisterView DataContext="{Binding RegisterViewModel}"/>
-                    </TabItem>
-                    <TabItem Header="Test Mode">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="4*" MinWidth="400"/>
-                                <ColumnDefinition Width="3"/>
-                                <ColumnDefinition Width="2*"/>
-                            </Grid.ColumnDefinitions>
-                            <components:TestModeView DataContext="{Binding TestModeViewModel}"/>
-                            <GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />
-                            <components:DeviceStatusView Grid.Column="2" DataContext="{Binding DeviceStatusViewModel}"/>
-                        </Grid>
-                    </TabItem>
-                    <TabItem Header="Loopback">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="4*" MinWidth="600"/>
-                                <ColumnDefinition Width="3"/>
-                                <ColumnDefinition Width="2*"/>
-                            </Grid.ColumnDefinitions>
-                            <components:LoobackView DataContext="{Binding LoopbackViewModel}"/>
-                            <GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />
-                            <components:DeviceStatusView Grid.Column="2" DataContext="{Binding DeviceStatusViewModel}"/>
-                        </Grid>
-                    </TabItem>
-                    <TabItem Header="FrameGenerator/Checker">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" MinWidth="500"/>
-                                <ColumnDefinition Width="3"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <components:FrameGenChecker DataContext="{Binding FrameGenCheckerViewModel}"/>
-                            <GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />
-                            <components:FrameGenCheckerStatusView Grid.Column="2" DataContext="{Binding DeviceStatusViewModel}"/>
-                        </Grid>
-
-                    </TabItem>
-                    <TabItem Header="Cable Diagnostics">
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="4*" MinWidth="600"/>
-                                <ColumnDefinition Width="3"/>
-                                <ColumnDefinition Width="2*"/>
-                            </Grid.ColumnDefinitions>
-                            <components:FaultDetectroView Grid.Column="0" Margin="0 10 0 0" DataContext="{Binding FaultDetectorViewModel}"/>
-                            <GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />
-                            <components:DeviceStatusView Grid.Column="2" DataContext="{Binding DeviceStatusViewModel}"/>
-                        </Grid>
-                    </TabItem>
-                </TabControl>
-            </Grid>-->
             <Grid Grid.ColumnSpan="2" Grid.Row="2" Margin="0 10 0 0">
                 <Grid>
                     <Grid.ColumnDefinitions>
