--- a/ADIN.WPF/View/LinkPropertiesView.xaml
+++ b/ADIN.WPF/View/LinkPropertiesView.xaml
@@ -13,7 +13,7 @@
         <converters:BooleanVisibilityConverter x:Key="booleanVisibilityConverter" IsInversed="False"/>
         <converters:BooleanVisibilityConverter x:Key="invertedBooleanVisibilityConverter" IsInversed="True"/>
     </UserControl.Resources>
-    <Grid Margin="5">
+    <Grid Margin="0 10 0 0">
         <!--<Label Content="Link Properties View"/>
         <Button Content="Reg Acc" Command="{Binding NavigateRegisterAccessCommand}"/>-->
         <!--telerik:StyleManager.Theme="Windows8"-->
@@ -21,7 +21,7 @@
         <ScrollViewer VerticalScrollBarVisibility="Auto" >
             <StackPanel Orientation="Vertical" IsEnabled="{Binding IsDeviceSelected}">
                 <Grid Visibility="{Binding IsADIN1100Board, Converter={StaticResource invertedBooleanVisibilityConverter}}">
-                    <GroupBox Header="Speed" Style="{StaticResource GroupBoxStyle}" Margin="0 5">
+                    <GroupBox Header="Speed" Style="{StaticResource GroupBoxStyle}" Margin="0 0 0 5">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="220"/>
@@ -188,7 +188,7 @@
                 </Grid>
 
                 <Grid Visibility="{Binding IsADIN1100Board, Converter={StaticResource booleanVisibilityConverter}}">
-                    <GroupBox Header="Auto-negotiation Mater/Slave Advertisement" Style="{StaticResource GroupBoxStyle}" Margin="0 5">
+                    <GroupBox Header="Auto-negotiation Mater/Slave Advertisement" Style="{StaticResource GroupBoxStyle}" Margin="0 0 0 5">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="220"/>
