--- a/ADIN.WPF/View/TestModeView.xaml
+++ b/ADIN.WPF/View/TestModeView.xaml
@@ -12,7 +12,7 @@
         <FrameworkElement x:Key="ProxyElement" DataContext="{Binding}"/>
         <telerik:BooleanToVisibilityConverter x:Key="booleanVisibilityConverter"/>
     </UserControl.Resources>
-    <Grid>
+    <Grid Margin="0 10 0 0">
         <StackPanel Orientation="Vertical" IsEnabled="{Binding IsDeviceSelected}">
 
             <StackPanel Orientation="Vertical">
